syntax = "proto3";

package peers_touch.model.error.v1;

option go_package = "github.com/peers-labs/peers-touch/station/frame/touch/model;model";

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_UNDEFINED = 1;

  ERROR_CODE_WELL_KNOWN_INVALID_RESOURCE_FORMAT = 10001;
  ERROR_CODE_WELL_KNOWN_UNSUPPORTED_PREFIX_TYPE = 10002;
  ERROR_CODE_ACTOR_INVALID_NAME = 10003;
  ERROR_CODE_ACTOR_INVALID_EMAIL = 10004;
  ERROR_CODE_ACTOR_INVALID_PASSWORD = 10005;
  ERROR_CODE_ACTOR_EXISTS = 10006;
  ERROR_CODE_ACTOR_INVALID_PASSPORT = 10007;
  ERROR_CODE_ACTOR_NOT_FOUND = 10008;
  ERROR_CODE_ACTOR_INVALID_CREDENTIALS = 10009;
  ERROR_CODE_PEER_ADDR_EXISTS = 10010;

  ERROR_CODE_UNAUTHORIZED = 20001;
  ERROR_CODE_INVALID_REQUEST = 20002;
  ERROR_CODE_INVALID_QUERY_PARAMETERS = 20003;
  ERROR_CODE_INVALID_REQUEST_BODY = 20004;
  ERROR_CODE_INVALID_PROTOBUF = 20005;
  ERROR_CODE_FAILED_TO_READ_BODY = 20006;
  ERROR_CODE_METHOD_NOT_ALLOWED = 20007;
  ERROR_CODE_INTERNAL_SERVER_ERROR = 20008;

  ERROR_CODE_POST_ID_REQUIRED = 30001;
  ERROR_CODE_POST_NOT_FOUND = 30002;
  ERROR_CODE_USER_ID_REQUIRED = 30003;
  ERROR_CODE_CREATE_POST_FAILED = 30004;
  ERROR_CODE_UPDATE_POST_FAILED = 30005;
  ERROR_CODE_DELETE_POST_FAILED = 30006;
  ERROR_CODE_LIKE_POST_FAILED = 30007;
  ERROR_CODE_UNLIKE_POST_FAILED = 30008;
  ERROR_CODE_GET_POST_FAILED = 30009;
  ERROR_CODE_LIST_POSTS_FAILED = 30010;
  ERROR_CODE_REPOST_FAILED = 30011;
  ERROR_CODE_GET_LIKERS_FAILED = 30012;
  ERROR_CODE_GET_TIMELINE_FAILED = 30013;
}

message ErrorResponse {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> details = 3;
}
